--- a/activity-log.html
+++ b/activity-log.html
@@ -2,55 +2,21 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>SECURE LOG | 篠ノ井技術クラブ</title>
+    <title>ACTIVITY LOG | 篠ノ井技術クラブ</title>
     <link rel="stylesheet" href="/style.css">
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-storage-compat.js"></script>
-    <style>
-        /* 1. 選択とドラッグを完全に禁止 */
-        body {
-            -webkit-user-select: none;
-            -moz-user-select: none;
-            -ms-user-select: none;
-            user-select: none;
-            -webkit-touch-callout: none; /* iPhone長押し禁止 */
-        }
-
-        /* 2. 透かし（ウォーターマーク）を画面全体に重ねる */
-        .watermark {
-            position: fixed;
-            top: 0; left: 0; width: 100%; height: 100%;
-            pointer-events: none; /* 下の画像は触れるようにする */
-            z-index: 9999;
-            background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='200' height='200' viewBox='0 0 200 200'><text fill='rgba(0, 174, 239, 0.1)' font-size='12' x='20' y='100' font-family='Orbitron' transform='rotate(-30 100 100)'>SHINONOI TECH CLUB - NO CAPTURE</text></svg>");
-        }
-
-        /* 3. スクショ検知用（PCでPrintScreen等が押された時に真っ暗にする） */
-        @media print {
-            body { display: none !important; }
-        }
-
-        /* 4. 画像の上に透明な板を置く（直接保存を物理的に防ぐ） */
-        .photo-item::after {
-            content: "";
-            position: absolute;
-            top: 0; left: 0; width: 100%; height: 100%;
-            background: transparent;
-            z-index: 5;
-        }
-    </style>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
 </head>
-<body oncontextmenu="warnSave(); return false;" onkeydown="checkKey(event)">
+<body style="background: #0b1d2e; color: white;" oncontextmenu="warnSave(); return false;">
 
-    <div class="watermark"></div>
     <div id="nav-container"></div>
 
     <header style="text-align:center; padding: 40px;">
-        <h1 style="font-family:'Orbitron';">PROTECTED LOG</h1>
-        <p style="color:#ff4757; font-weight:900;">⚠️ スクリーンショット・保存禁止 ⚠️</p>
+        <h1 style="font-family:'Orbitron'; text-shadow: 0 0 10px #00aeef;">ACTIVITY LOG</h1>
+        <p style="color:#00aeef; font-weight:900;">GITHUB REPO: /images/</p>
     </header>
 
-    <main id="main-content">
+    <main>
         <div id="auto-gallery" class="gallery-container"></div>
     </main>
 
@@ -61,20 +27,42 @@
 
     <script src="/menu.js"></script>
     <script>
-        const storage = firebase.storage();
-        const listRef = storage.ref('tournament-photos/');
-        const galleryArea = document.getElementById('auto-gallery');
+        // GitHub APIで /images/ フォルダのファイル一覧を取得
+        const GITHUB_USER = "emr-snn-dev";
+        const GITHUB_REPO = "emr-snn-dev.github.io"; // リポジトリ名
+        const IMAGE_FOLDER = "images"; // 取得したいフォルダ名
 
-        listRef.listAll().then((res) => {
-            res.items.forEach((itemRef) => {
-                itemRef.getDownloadURL().then((url) => {
-                    const div = document.createElement('div');
-                    div.className = 'photo-item';
-                    div.innerHTML = `<img src="${url}" class="secure-img" onclick="openLightbox('${url}')">`;
-                    galleryArea.appendChild(div);
+        async function loadGithubImages() {
+            const apiUrl = `https://api.github.com/repos/${GITHUB_USER}/${GITHUB_REPO}/contents/${IMAGE_FOLDER}`;
+            const galleryArea = document.getElementById('auto-gallery');
+
+            try {
+                const response = await fetch(apiUrl);
+                const files = await response.json();
+
+                files.forEach(file => {
+                    // 画像ファイル（jpg, png, gif, webp）のみを抽出
+                    if (file.name.match(/\.(jpg|jpeg|png|gif|webp)$/i)) {
+                        const div = document.createElement('div');
+                        div.className = 'photo-item';
+                        
+                        // 文字表示機能（ファイル名に _txt が含まれる場合）
+                        let label = "";
+                        if(file.name.includes('_txt')) {
+                            const cleanName = file.name.split('_txt')[0];
+                            label = `<div class="photo-label">${cleanName}</div>`;
+                        }
+
+                        // 画像のパスは file.download_url または相対パスを使用
+                        const imgUrl = file.download_url;
+                        div.innerHTML = `<img src="${imgUrl}" class="secure-img" onclick="openLightbox('${imgUrl}')">${label}`;
+                        galleryArea.appendChild(div);
+                    }
                 });
-            });
-        });
+            } catch (e) {
+                console.error("GitHubからの画像取得に失敗しました:", e);
+            }
+        }
 
         function openLightbox(url) {
             document.getElementById('lightbox-img').src = url;
@@ -83,23 +71,12 @@
         function closeLightbox() {
             document.getElementById('lightbox').classList.remove('active');
         }
-
-        // 警告メッセージ
         function warnSave() {
             alert("セキュリティ保護のため、右クリックおよび画像の保存は禁止されています。");
         }
 
-        // PCのショートカットキー（Ctrl+S, Ctrl+P, PrintScreen等）をブロック
-        function checkKey(e) {
-            if (e.ctrlKey && (e.key === 's' || e.key === 'p' || e.key === 'u')) {
-                e.preventDefault();
-                alert("この操作は無効化されています。");
-            }
-        }
-
-        // iPhoneのスクショ対策：画面から指が離れた瞬間に一瞬画面を隠すなどの心理的抵抗
-        // ※ハードウェア側のスクショをソフトで止めることはできませんが、
-        // ログに「誰がいつアクセスしたか」を残すようにすると抑止力になります。
+        // 実行
+        loadGithubImages();
     </script>
 </body>
 </html>
