--- a/about.html
+++ b/about.html
@@ -7,11 +7,23 @@
     <link rel="stylesheet" href="/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&family=Noto+Sans+JP:wght@900&display=swap" rel="stylesheet">
     <style>
+        /* 参加要項テーブルのスマホ対応 */
         @media (max-width: 600px) {
-            .spec-table tr { display: flex; flex-direction: column; border-bottom: 2px solid #eee; }
-            .spec-table th { width: 100% !important; padding: 10px 20px !important; }
-            .spec-table td { padding: 10px 20px 20px !important; }
-            .about-title { font-size: 2rem !important; }
+            .spec-table tr { 
+                display: flex; 
+                flex-direction: column; 
+                border-bottom: 2px solid #eee; 
+            }
+            .spec-table th { 
+                width: 100% !important; 
+                padding: 10px 20px !important; 
+            }
+            .spec-table td { 
+                padding: 10px 20px 20px !important; 
+            }
+            .about-title { 
+                font-size: 2rem !important; 
+            }
         }
     </style>
 </head>
@@ -49,14 +61,23 @@
             <div style="margin-top: 60px; border-top: 2px solid #eee; padding-top: 40px;">
                 <h2 style="text-align: center; font-weight: 900; font-size: 1.8rem; margin-bottom: 30px; color: #000;">募集要項</h2>
                 <table class="spec-table" style="width: 100%; border-collapse: collapse; font-weight: 900; margin-bottom: 30px;">
-                    <tr style="border-bottom: 1px solid #eee;"><th style="text-align: left; padding: 20px; background: #f8f9fa; width: 30%;">対象</th><td style="padding: 20px;">ものづくりに興味がある中学生</td></tr>
-                    <tr style="border-bottom: 1px solid #eee;"><th style="text-align: left; padding: 20px; background: #f8f9fa;">必要なもの</th><td style="padding: 20px;">やる気と、汚れてもいい服</td></tr>
-                    <tr style="border-bottom: 1px solid #eee;"><th style="text-align: left; padding: 20px; background: #f8f9fa;">活動場所</th><td style="padding: 20px;">篠ノ井西中学校 金工室</td></tr>
+                    <tr style="border-bottom: 1px solid #eee;">
+                        <th style="text-align: left; padding: 20px; background: #f8f9fa; width: 30%;">対象</th>
+                        <td style="padding: 20px;">ものづくりに興味がある中学生</td>
+                    </tr>
+                    <tr style="border-bottom: 1px solid #eee;">
+                        <th style="text-align: left; padding: 20px; background: #f8f9fa;">必要なもの</th>
+                        <td style="padding: 20px;">やる気と、汚れてもいい服</td>
+                    </tr>
+                    <tr style="border-bottom: 1px solid #eee;">
+                        <th style="text-align: left; padding: 20px; background: #f8f9fa;">活動場所</th>
+                        <td style="padding: 20px;">篠ノ井西中学校 金工室</td>
+                    </tr>
                 </table>
 
                 <div id="map-area" style="width: 100%; border-radius: 12px; overflow: hidden; border: 2px solid #000; box-shadow: 0 5px 15px rgba(0,0,0,0.1);">
                     <iframe 
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3202.484179374026!2d138.12513907641214!3d36.56581458102325!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x601d8100778f5669%3A0xc3b53f64c672b1a8!2z6ZW36YeO5biC56uL566篠5be76KW_5Lit5a2m5qCh!5e0!3m2!1sja!2sjp!4v1710000000000!5m2!1sja!2sjp" 
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3206.8428414995955!2d138.13409837648356!3d36.557973081498684!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x601d83ba0eb3bdd1%3A0x532a1f5c0ac8b650!2z6ZW36YeO5biC56uL56篠5Y-j6KW_5Lit5a2m5qCh!5e0!3m2!1sja!2sjp!4v1716281234567!5m2!1sja!2sjp" 
                         width="100%" height="350" style="border:0; vertical-align: bottom;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
                     </iframe>
                 </div>
