--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
 
                 <div id="map-area" style="width: 100%; border-radius: 12px; overflow: hidden; border: 2px solid #000; box-shadow: 0 5px 15px rgba(0,0,0,0.1);">
                     <iframe 
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3204.621453073998!2d138.13689627629555!3d36.56306548109062!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x601d87ba933583e1%3A0x532a1c5c0ac8b650!2z6ZW36YeO5biC56uL56篠5Lit566h6KW_5Lit5a2m5qCh!5e0!3m2!1sja!2sjp!4v1710000000000!5m2!1sja!2sjp" 
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3204.3820935392094!2d138.12871217641215!3d36.56903277232677!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x601d83ba8e35bdb1%3A0x532a1c5c0ac8b650!2z6ZW36YeO5biC56uL56篠5be36KW_5Lit5a2m5qCh!5e0!3m2!1sja!2sjp!4v1716382000000!5m2!1sja!2sjp" 
                         width="100%" height="350" style="border:0; vertical-align: bottom;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
                     </iframe>
                 </div>
@@ -68,13 +68,13 @@
                         <div style="margin-top: 20px; padding: 15px 30px; font-size: 1.1rem; display: inline-block; width: 80%; max-width: 300px; background: #cbd5e1; color: #fff; border-radius: 8px; cursor: not-allowed; font-weight: 900;">PREPARING...</div>
                     </div>
 
-                    <div style="display: flex; justify-content: center; gap: 30px; padding-bottom: 20px;">
+                    <div style="display: flex; justify-content: center; gap: 35px; padding-bottom: 20px;">
                         <a href="https://x.com/shinonishi_tec?s=21" target="_blank" style="text-decoration: none; color: #000; display: flex; flex-direction: column; align-items: center; gap: 8px;">
-                            <div style="width: 55px; height: 55px; background: #000; border-radius: 14px; display: flex; align-items: center; justify-content: center; color: #fff; font-size: 1.6rem; font-weight: bold;">X</div>
-                            <span style="font-size: 0.75rem; font-weight: 900;">X</span>
+                            <img src="https://abs.twimg.com/favicons/twitter.2.ico" alt="Twitter" style="width: 55px; height: 55px; border-radius: 14px; object-fit: cover; box-shadow: 0 4px 10px rgba(0,0,0,0.1);">
+                            <span style="font-size: 0.75rem; font-weight: 900;">Twitter</span>
                         </a>
                         <a href="https://www.instagram.com/shinonishi_tec?igsh=MTVmOHR5enFnY2V6dQ%3D%3D&utm_source=qr" target="_blank" style="text-decoration: none; color: #000; display: flex; flex-direction: column; align-items: center; gap: 8px;">
-                            <div style="width: 55px; height: 55px; background: linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%); border-radius: 14px; display: flex; align-items: center; justify-content: center; color: #fff; font-size: 1.8rem;">📸</div>
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" style="width: 55px; height: 55px; border-radius: 14px; object-fit: cover; box-shadow: 0 4px 10px rgba(0,0,0,0.1);">
                             <span style="font-size: 0.75rem; font-weight: 900;">Instagram</span>
                         </a>
                     </div>
