--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
 
                 <div id="map-area" style="width: 100%; border-radius: 12px; overflow: hidden; border: 2px solid #000; box-shadow: 0 5px 15px rgba(0,0,0,0.1);">
                     <iframe 
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3204.3820935392094!2d138.12871217641215!3d36.56903277232677!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x601d83ba8e35bdb1%3A0x532a1c5c0ac8b650!2z6ZW36YeO5biC56uL56篠5be36KW_5Lit5a2m5qCh!5e0!3m2!1sja!2sjp!4v1716382000000!5m2!1sja!2sjp" 
+                        src="https://www.google.com/search?q=https://www.google.com/maps/embed%3Fpb%3D!1m18!1m12!1m3!1d3202.665389657064!2d138.1318629!3d36.5763337!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x601d83ba0ed3bdb1%253A0x532a1f5c0ac8b650!2z6ZW36YeO5biC56uL56%E7%AF%A05Lit5biC6KW_5Lit5a2m5qCh!5e0!3m2!1sja!2sjp!4v1716512345678!5m2!1sja!2sjp" 
                         width="100%" height="350" style="border:0; vertical-align: bottom;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
                     </iframe>
                 </div>
@@ -70,7 +70,7 @@
 
                     <div style="display: flex; justify-content: center; gap: 35px; padding-bottom: 20px;">
                         <a href="https://x.com/shinonishi_tec?s=21" target="_blank" style="text-decoration: none; color: #000; display: flex; flex-direction: column; align-items: center; gap: 8px;">
-                            <img src="https://abs.twimg.com/favicons/twitter.2.ico" alt="Twitter" style="width: 55px; height: 55px; border-radius: 14px; object-fit: cover; box-shadow: 0 4px 10px rgba(0,0,0,0.1);">
+                            <img src="https://abs.twimg.com/responsive-web/client-web/icon-ios.b1fd646a.png" alt="X" style="width: 55px; height: 55px; border-radius: 14px; object-fit: cover; box-shadow: 0 4px 10px rgba(0,0,0,0.1);">
                             <span style="font-size: 0.75rem; font-weight: 900;">Twitter</span>
                         </a>
                         <a href="https://www.instagram.com/shinonishi_tec?igsh=MTVmOHR5enFnY2V6dQ%3D%3D&utm_source=qr" target="_blank" style="text-decoration: none; color: #000; display: flex; flex-direction: column; align-items: center; gap: 8px;">
