--- a/portfolio.html
+++ b/portfolio.html
@@ -29,17 +29,7 @@
         #lightbox img {
             max-width: 90%;
             max-height: 90%;
-            pointer-events: none; /* 拡大中も保存不可 */
-        }
-
-        /* LOGINボタンのデザイン */
-        .login-btn {
-            background: #00aeef;
-            color: #fff !important;
-            padding: 8px 25px !important;
-            border-radius: 50px;
-            font-weight: 900;
-            box-shadow: 0 4px 10px rgba(0, 174, 239, 0.3);
+            pointer-events: none;
         }
 
         /* 押せないカテゴリ表示 */
@@ -48,6 +38,7 @@
             justify-content: center;
             gap: 15px;
             margin: 40px 0;
+            flex-wrap: wrap;
         }
         .display-item {
             background: #fff;
@@ -62,7 +53,7 @@
         /* カードレイアウト */
         .portfolio-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
             gap: 30px;
             max-width: 1100px;
             margin: 0 auto;
@@ -81,33 +72,30 @@
             object-fit: cover;
             cursor: zoom-in;
             border-bottom: 4px solid #00aeef;
+            background: #f0f0f0; /* 画像がない時の背景 */
         }
         .p-content { padding: 25px; text-align: left; }
         .p-specs { display: grid; grid-template-columns: repeat(3, 1fr); gap: 8px; }
         .spec-unit { background: #f8f9fa; padding: 10px; border-radius: 8px; text-align: center; }
 
-        @media (max-width: 500px) { .portfolio-grid { grid-template-columns: 1fr; } }
+        @media (max-width: 600px) {
+            .portfolio-grid { grid-template-columns: 1fr; }
+            header h1 { font-size: 2.5rem !important; }
+        }
     </style>
 </head>
-<body oncontextmenu="return false;"> <div id="loading"><h1>PORTFOLIO</h1></div>
+<body oncontextmenu="return false;">
+    <div id="loading"><h1>PORTFOLIO LOADING...</h1></div>
+    
+    <div id="nav-container"></div>
 
     <div id="lightbox" onclick="this.style.display='none'">
         <img id="lightbox-img" src="" alt="">
     </div>
 
-    <nav class="global-nav">
-        <div class="nav-brand">SHINONOI</div>
-        <div class="nav-links">
-            <a href="index.html">HOME</a>
-            <a href="Portfolio.html">PORTFOLIO</a>
-            <a href="about.html">ABOUT</a>
-            <a href="login.html" class="login-btn">LOGIN</a>
-        </div>
-    </nav>
-
     <header style="text-align:center; padding: 60px 20px;">
-        <h1 style="font-family:'Orbitron'; font-size: 3.5rem; margin:0;">PORTFOLIO</h1>
-        <p style="font-weight:900; color:#666;">僕たちの挑戦と、技術の記録</p>
+        <h1 style="font-family:'Orbitron'; font-size: 3.5rem; margin:0; letter-spacing: 5px;">PORTFOLIO</h1>
+        <p style="font-weight:900; color:#666; margin-top: 10px;">僕たちの挑戦と、技術の記録</p>
     </header>
 
     <div class="category-display">
@@ -117,22 +105,23 @@
     </div>
 
     <main class="portfolio-grid">
-        <article class="p-card">
-            <img src="images/race1.jpg" class="p-image" onclick="openLightbox(this.src)">
+        <article class="p-card" style="opacity: 0.7;">
+            <div class="p-image" style="display:flex; align-items:center; justify-content:center; color:#ccc; font-family:'Orbitron'; font-weight:900;">COMING SOON</div>
             <div class="p-content">
-                <span style="background:#00aeef; color:#fff; padding:3px 10px; border-radius:50px; font-size:0.7rem;">ECO-RUN</span>
-                <h2 style="font-size:1.5rem; margin:10px 0;">エコマイレッジもてぎ</h2>
-                <p style="font-size:0.9rem; color:#486581; margin-bottom:20px;">栃木県で開催される全国大会。自分たちで設計・整備したマシンで完走を目指します。</p>
+                <span style="background:#666; color:#fff; padding:3px 10px; border-radius:50px; font-size:0.7rem;">PREPARATION</span>
+                <h2 style="font-size:1.5rem; margin:10px 0; color:#333;">2026年度 活動開始予定</h2>
+                <p style="font-size:0.9rem; color:#486581; margin-bottom:20px;">4月の新学期より、エコカー製作のプロセスや大会への挑戦をここに記録していきます。</p>
                 <div class="p-specs">
-                    <div class="spec-unit"><span style="font-size:0.6rem; color:#999;">STATUS</span><br><b>完走</b></div>
-                    <div class="spec-unit"><span style="font-size:0.6rem; color:#999;">PLACE</span><br><b>もてぎ</b></div>
-                    <div class="spec-unit"><span style="font-size:0.6rem; color:#999;">YEAR</span><br><b>2025</b></div>
+                    <div class="spec-unit"><span style="font-size:0.6rem; color:#999;">STATUS</span><br><b>準備中</b></div>
+                    <div class="spec-unit"><span style="font-size:0.6rem; color:#999;">TARGET</span><br><b>全国大会</b></div>
+                    <div class="spec-unit"><span style="font-size:0.6rem; color:#999;">START</span><br><b>2026.04</b></div>
                 </div>
             </div>
         </article>
-    </main>
 
-    <footer style="text-align:center; padding: 60px; color:#999; font-weight:900;">
+        </main>
+
+    <footer style="text-align:center; padding: 80px 20px 120px; color:#999; font-weight:900;">
         © 2026 篠ノ井技術クラブ
     </footer>
 
@@ -140,6 +129,7 @@
     <script>
         // 拡大表示機能
         function openLightbox(src) {
+            if(!src) return;
             const lightbox = document.getElementById('lightbox');
             const img = document.getElementById('lightbox-img');
             img.src = src;
@@ -148,8 +138,9 @@
 
         // ローディング解除
         window.addEventListener('load', () => {
-            document.getElementById('loading').style.opacity = '0';
-            setTimeout(() => { document.getElementById('loading').style.display = 'none'; }, 500);
+            const loader = document.getElementById('loading');
+            loader.style.opacity = '0';
+            setTimeout(() => { loader.style.display = 'none'; }, 500);
         });
 
         // 保存ショートカット制限
